--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 }
 
 html {
+  
   height: 100%;
   background: var(--light-blue-100);
 }
@@ -88,10 +89,23 @@ body {
   grid-template-columns: 50% 50%;
 }
 
-.buttonsDatos button:nth-child(0) {
+.buttonsDatos button {
+  padding: 24px;
+}
+
+.buttonsDatos button:nth-child(1) {
   background-color: var(--dark-blue-300);
   color: white;
   border-radius: 24px;
+  margin-right: 12px;
+}
+
+.buttonsDatos button:nth-child(2) {
+  background-color: #D8DFE8;
+  color: white;
+  border-radius: 24px;
+  border: 1px solid var(--dark-blue-300);
+  margin-left: 12px;
 }
 
 /*section*/
@@ -128,5 +142,39 @@ body {
 
 .imgTexto img {
   width: 100%;
-  color: darkblu;
+  }
+
+@media (max-width: 768px) {
+  html{
+    width: 100%;
+  }
+
+  body{
+    flex-direction: column;
+    width: 100%;
+  }
+/*section*/
+  .logoAlura-container{
+    width: 100%;
+    height: 17.3%;
+  }
+/*section*/
+  .entradaDatos-container{
+    width: 100%;
+    height: 55%;
+    padding: 0;
+  }
+/*section*/
+  .mensaje-container{
+    width: 100%;
+    height: 27.7%;
+    padding: 40px 0 40px 0;
+  }
+
+  .imgTexto img {
+    display: none;
+    }
+
+
+
 }
