--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
 }
 
 html {
-  
   height: 100%;
   background: var(--light-blue-100);
 }
@@ -55,9 +54,8 @@ body {
 .entradaDatos-container {
   width: 58.33%;
   padding: 80px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: 85% 15%;
 }
 
 .entradaDatos-container textarea {
@@ -71,6 +69,8 @@ body {
   font-size: var(--lg);
   background: var(--light-blue-100);
   border: none;
+  resize: none;
+  height: 100%;
 }
 
 .advertencia-parrafo {
@@ -84,7 +84,7 @@ body {
   color: var(--gray-400);
 }
 
-.buttonsDatos{
+.buttonsDatos {
   display: grid;
   grid-template-columns: 50% 50%;
 }
@@ -101,7 +101,7 @@ body {
 }
 
 .buttonsDatos button:nth-child(2) {
-  background-color: #D8DFE8;
+  background-color: #d8dfe8;
   color: white;
   border-radius: 24px;
   border: 1px solid var(--dark-blue-300);
@@ -142,39 +142,73 @@ body {
 
 .imgTexto img {
   width: 100%;
-  }
+}
 
 @media (max-width: 768px) {
-  html{
+  html {
     width: 100%;
   }
 
-  body{
+  body {
     flex-direction: column;
     width: 100%;
   }
-/*section*/
-  .logoAlura-container{
+  /*section*/
+  .logoAlura-container {
     width: 100%;
-    height: 17.3%;
+    height: 10%;
   }
-/*section*/
-  .entradaDatos-container{
+  /*section*/
+  .entradaDatos-container {
     width: 100%;
-    height: 55%;
-    padding: 0;
+    height: 62.3%;
+    padding: 40px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: 75% 25%;
+    justify-content: inherit;
   }
-/*section*/
-  .mensaje-container{
+
+  .inputDatos {
+    padding: 40px;
+  }
+  /*section*/
+  .mensaje-container {
     width: 100%;
     height: 27.7%;
-    padding: 40px 0 40px 0;
+    padding: 40px;
+    box-sizing: border-box;
   }
 
   .imgTexto img {
     display: none;
-    }
+  }
+}
 
+@media (max-width: 375px) {
+  .logoAlura-container {
+    height: 10%;
+  }
 
+  .entradaDatos-container {
+    height: 62.3%;
+  }
 
+  .inputDatos {
+    padding: 0;
+  }
+
+  .buttonsDatos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .buttonsDatos button:nth-child(1) {
+    margin-right: 0px;
+    margin-bottom: 24px;
+  }
+
+  .buttonsDatos button:nth-child(2) {
+    margin-left: 0px;
+  }
 }
