--- a/style.css
+++ b/style.css
@@ -31,8 +31,11 @@ html {
   height: 100%;
   background: var(--light-blue-100);
 }
-
 body {
+  height: 100%;
+}
+
+.allContainer {
   display: flex;
   flex-direction: row;
   height: 100%;
@@ -91,6 +94,11 @@ body {
 
 .buttonsDatos button {
   padding: 24px;
+
+}
+
+.buttonsDatos button:hover {
+  cursor: pointer;
 }
 
 .buttonsDatos button:nth-child(1) {
@@ -98,11 +106,14 @@ body {
   color: white;
   border-radius: 24px;
   margin-right: 12px;
+  
 }
+
+
 
 .buttonsDatos button:nth-child(2) {
   background-color: #d8dfe8;
-  color: white;
+  color: var(--dark-blue-300);;
   border-radius: 24px;
   border: 1px solid var(--dark-blue-300);
   margin-left: 12px;
@@ -125,13 +136,23 @@ body {
   background-color: white;
 }
 
+.mensaje {
+  height: 100%;
+  padding: 30px 0 30px 0;
+  word-wrap: break-word;
+}
+
+.mensaje p {
+  font-size: var(--lg);
+}
+
 .imgTexto {
   text-align: center;
 }
 
 .imgTexto h3 {
   color: var(--gray-500);
-  font-size: var(--lm);
+  font-size: var(--lg);
   padding: 32px 0 16px 0;
 }
 
@@ -144,17 +165,43 @@ body {
   width: 100%;
 }
 
+.button-mensaje button {
+  background-color: #d8dfe8;
+  color: var(--dark-blue-300);
+  border-radius: 24px;
+  border: 1px solid var(--dark-blue-300);
+  padding: 24px;
+  width: 100%;
+}
+
+.button-mensaje button:hover {
+  cursor: pointer;
+}
+
+.button-mensaje {
+  padding-bottom: 24px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 768px) {
   html {
     width: 100%;
   }
-
   body {
+    height: 100%;
+  }
+
+  .allContainer {
     flex-direction: column;
     width: 100%;
   }
   /*section*/
   .logoAlura-container {
+    box-sizing: border-box;
     width: 100%;
     height: 10%;
   }
@@ -183,6 +230,10 @@ body {
   .imgTexto img {
     display: none;
   }
+
+  .mensaje p {
+    font-size: var(--md);
+  }
 }
 
 @media (max-width: 375px) {
@@ -210,5 +261,9 @@ body {
 
   .buttonsDatos button:nth-child(2) {
     margin-left: 0px;
+  }
+
+  .mensaje p {
+    font-size: var(--sm);
   }
 }
