--- a/style.css
+++ b/style.css
@@ -187,6 +187,27 @@ footer {
   flex-direction: column;
 }
 
+.development{
+  text-align: center;
+}
+
+.redesSociales ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0px;
+}
+
+.redesSociales li {
+  list-style: none;
+  color: white;
+}
+
+.redesSociales img {
+  width: 70px;
+  height: 70px;
+}
+
+
 @media (max-width: 768px) {
   html {
     width: 100%;
@@ -208,7 +229,7 @@ footer {
   /*section*/
   .entradaDatos-container {
     width: 100%;
-    height: 62.3%;
+    height: 50%;
     padding: 40px;
     box-sizing: border-box;
     display: grid;
@@ -222,7 +243,7 @@ footer {
   /*section*/
   .mensaje-container {
     width: 100%;
-    height: 27.7%;
+    height: 40%;
     padding: 40px;
     box-sizing: border-box;
   }
@@ -254,9 +275,13 @@ footer {
     flex-direction: column;
   }
 
+  .buttonAdvertencia {
+    box-sizing: border-box;
+  }
+
   .buttonsDatos button:nth-child(1) {
     margin-right: 0px;
-    margin-bottom: 24px;
+    margin-bottom: 5px;
   }
 
   .buttonsDatos button:nth-child(2) {
